--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "googleapis": "^130.0.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.4",
     "nodemailer": "^6.9.8",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth20": "^2.0.0"
   }
 }
